# http-handle

./: .gitignore  CHANGELOG.md  CNAME  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TEMPLATE.md  TEST_COVERAGE_ANALYSIS.md  build.rs  crates.js  deny.toml  help.html  index.html  manifest.json  pyproject.toml  search-index.js  settings.html  src-files.js  test_mime.rs
.github/: CODEOWNERS  scorecard-exceptions.txt  scorecard-protected-checks.txt
benches/: http2_benchmark.rs  micro_benchmark.rs  perf_server_benchmark.rs  server_benchmark.rs
docker/: http-handle-static.Dockerfile  http-handle.Dockerfile
docs/: ARCHITECTURE.md  BACKLOG_ISSUES_2026.md  BENCHMARK_CLAIM_GOVERNANCE.md  BENCHMARK_REPRODUCIBILITY.md  CI_PIPELINES_REUSE_PLAN.md  CONTAINER_SECURITY_POLICY.md  DEPRECATION_POLICY.md  DISTRIBUTED_RATE_LIMITING.md  DOCS_GOVERNANCE.tsv  DOCS_QUALITY_RUBRIC.md  ENTERPRISE_AUTHZ.md  ERRORS_AND_RECOVERY.md  EXAMPLES.md  EXECUTION_PLAN_v0.0.4.md  FAQ.md  HEAP_PROFILE.md  HTTP3_DESIGN.md  ISSUE_PROGRESS.md  LTS_POLICY.md  MIGRATION_GUIDE.md  OTEL_PIPELINE_POLICY.md  PERFORMANCE.md  PORTABILITY_MATRIX.md  PROTOCOL_SUPPORT.md  RECIPES.md  RELEASE_TRANSITION_v0.0.3.md  RUNTIME_AUTOTUNE.md  SCORECARD_POLICY.md  SECURITY_SLA_POLICY.md  SLO_SLI_POLICY.md  SLSA_POLICY.md  TENANT_ISOLATION.md  TUTORIALS.md
examples/: all.rs  async.rs  auth.rs  autotune.rs  basic_server.rs  batch.rs  bench.rs  benchmark_target.rs  builder.rs  config.rs  dhat.rs  dhat_alloc_profile.rs  enterprise.rs  (+45 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: protocol_state_machine.rs  request_parser.rs
(+319 files in other folders)
