[package]
name = "http-handle-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
http-handle = { path = ".." }

[[bin]]
name = "request_parser"
path = "fuzz_targets/request_parser.rs"
test = false
doc = false
bench = false
